--- a/playbook_files.yml
+++ b/playbook_files.yml
@@ -19,3 +19,181 @@ cat first.yml
       lineinfile:
         line: "Hi Ansible , Playbook"
         path: /var/www/html/index.html    
+ansible-playbook --syntax-check first.yml
+
+playbook: first.yml
+alka1@controlnode:~/test$ ansible-playbook --syntax-check first.yml
+
+playbook: first.yml
+alka1@controlnode:~/test$ ansible-playbook --check first.yml
+
+PLAY [Installing the Apache Webserver] **************************************************************************************************************************************************
+
+TASK [Gathering Facts] ******************************************************************************************************************************************************************
+ok: [172.31.7.7]
+ok: [172.31.10.2]
+
+TASK [Installing Apache] ****************************************************************************************************************************************************************
+changed: [172.31.7.7]
+changed: [172.31.10.2]
+
+TASK [Start Apadche Web Server] *********************************************************************************************************************************************************
+fatal: [172.31.7.7]: FAILED! => {"changed": false, "msg": "Could not find the requested service apache2: host"}
+fatal: [172.31.10.2]: FAILED! => {"changed": false, "msg": "Could not find the requested service apache2: host"}
+
+PLAY RECAP ******************************************************************************************************************************************************************************
+172.31.10.2                : ok=2    changed=1    unreachable=0    failed=1    skipped=0    rescued=0    ignored=0   
+172.31.7.7                 : ok=2    changed=1    unreachable=0    failed=1    skipped=0    rescued=0    ignored=0   
+
+alka1@controlnode:~/test$ vim first.yml
+alka1@controlnode:~/test$ ansible-playbook --syntax-check first.yml
+
+playbook: first.yml
+alka1@controlnode:~/test$ vim first.yml
+alka1@controlnode:~/test$ ansible-playbook --syntax-check first.yml
+
+playbook: first.yml
+alka1@controlnode:~/test$ vim first.yml
+alka1@controlnode:~/test$ ansible-playbook first.yml
+
+PLAY [Installing the Apache Webserver] **************************************************************************************************************************************************
+
+TASK [Gathering Facts] ******************************************************************************************************************************************************************
+ok: [172.31.7.7]
+ok: [172.31.10.2]
+
+TASK [update apt] ***********************************************************************************************************************************************************************
+changed: [172.31.7.7]
+changed: [172.31.10.2]
+
+TASK [Installing Apache] ****************************************************************************************************************************************************************
+ok: [172.31.7.7]
+ok: [172.31.10.2]
+
+TASK [Start Apache  Server] *************************************************************************************************************************************************************
+fatal: [172.31.7.7]: FAILED! => {"changed": false, "msg": "Could not find the requested service apache2: host"}
+fatal: [172.31.10.2]: FAILED! => {"changed": false, "msg": "Could not find the requested service apache2: host"}
+
+PLAY RECAP ******************************************************************************************************************************************************************************
+172.31.10.2                : ok=3    changed=1    unreachable=0    failed=1    skipped=0    rescued=0    ignored=0   
+172.31.7.7                 : ok=3    changed=1    unreachable=0    failed=1    skipped=0    rescued=0    ignored=0   
+
+alka1@controlnode:~/test$ vim first.yml
+alka1@controlnode:~/test$ ansible-playbook first.yml
+
+PLAY [Installing the Apache Webserver] **************************************************************************************************************************************************
+
+TASK [Gathering Facts] ******************************************************************************************************************************************************************
+ok: [172.31.7.7]
+ok: [172.31.10.2]
+
+TASK [update apt] ***********************************************************************************************************************************************************************
+changed: [172.31.7.7]
+changed: [172.31.10.2]
+
+TASK [Installing Apache] ****************************************************************************************************************************************************************
+fatal: [172.31.7.7]: FAILED! => {"changed": false, "msg": "No package matching 'alka1' is available"}
+fatal: [172.31.10.2]: FAILED! => {"changed": false, "msg": "No package matching 'alka1' is available"}
+
+PLAY RECAP ******************************************************************************************************************************************************************************
+172.31.10.2                : ok=2    changed=1    unreachable=0    failed=1    skipped=0    rescued=0    ignored=0   
+172.31.7.7                 : ok=2    changed=1    unreachable=0    failed=1    skipped=0    rescued=0    ignored=0   
+
+alka1@controlnode:~/test$ vim first.yml
+alka1@controlnode:~/test$ ansible-playbook first.yml
+
+PLAY [Installing the Apache Webserver] **************************************************************************************************************************************************
+
+TASK [Gathering Facts] ******************************************************************************************************************************************************************
+ok: [172.31.7.7]
+ok: [172.31.10.2]
+
+TASK [update apt] ***********************************************************************************************************************************************************************
+changed: [172.31.7.7]
+changed: [172.31.10.2]
+
+TASK [Installing Apache] ****************************************************************************************************************************************************************
+changed: [172.31.7.7]
+changed: [172.31.10.2]
+
+TASK [Start Apache  Server] *************************************************************************************************************************************************************
+ok: [172.31.7.7]
+ok: [172.31.10.2]
+
+TASK [create a index.html file] *********************************************************************************************************************************************************
+fatal: [172.31.7.7]: FAILED! => {"changed": false, "msg": "value of state must be one of: absent, directory, file, hard, link, touch, got: present"}
+fatal: [172.31.10.2]: FAILED! => {"changed": false, "msg": "value of state must be one of: absent, directory, file, hard, link, touch, got: present"}
+
+PLAY RECAP ******************************************************************************************************************************************************************************
+172.31.10.2                : ok=4    changed=2    unreachable=0    failed=1    skipped=0    rescued=0    ignored=0   
+172.31.7.7                 : ok=4    changed=2    unreachable=0    failed=1    skipped=0    rescued=0    ignored=0   
+
+alka1@controlnode:~/test$ vim first.yml
+alka1@controlnode:~/test$ ansible-playbook first.yml
+
+PLAY [Installing the Apache Webserver] **************************************************************************************************************************************************
+
+TASK [Gathering Facts] ******************************************************************************************************************************************************************
+ok: [172.31.7.7]
+ok: [172.31.10.2]
+
+TASK [update apt] ***********************************************************************************************************************************************************************
+changed: [172.31.10.2]
+changed: [172.31.7.7]
+
+TASK [Installing Apache] ****************************************************************************************************************************************************************
+ok: [172.31.7.7]
+ok: [172.31.10.2]
+
+TASK [Start Apache  Server] *************************************************************************************************************************************************************
+ok: [172.31.7.7]
+ok: [172.31.10.2]
+
+TASK [create a index.html file] *********************************************************************************************************************************************************
+changed: [172.31.7.7]
+changed: [172.31.10.2]
+
+TASK [edit a file] **********************************************************************************************************************************************************************
+changed: [172.31.7.7]
+changed: [172.31.10.2]
+
+PLAY RECAP ******************************************************************************************************************************************************************************
+172.31.10.2                : ok=6    changed=3    unreachable=0    failed=0    skipped=0    rescued=0    ignored=0   
+172.31.7.7                 : ok=6    changed=3    unreachable=0    failed=0    skipped=0    rescued=0    ignored=0   
+
+alka1@controlnode:~/test$ vim first.yml
+alka1@controlnode:~/test$ vim first.yml
+alka1@controlnode:~/test$ 
+alka1@controlnode:~/test$ pwd
+/home/alka1/test
+alka1@controlnode:~/test$ vim first.yml
+alka1@controlnode:~/test$ vim index.html
+alka1@controlnode:~/test$ ls
+ansible.cfg  first.yml  index.html  myinv  saharsa.txt
+alka1@controlnode:~/test$ ansible-playbook first.yml
+
+PLAY [Installing the Apache Webserver] **************************************************************************************************************************************************
+
+TASK [Gathering Facts] ******************************************************************************************************************************************************************
+ok: [172.31.10.2]
+ok: [172.31.7.7]
+
+TASK [update apt] ***********************************************************************************************************************************************************************
+changed: [172.31.7.7]
+changed: [172.31.10.2]
+
+TASK [Installing Apache] ****************************************************************************************************************************************************************
+ok: [172.31.7.7]
+ok: [172.31.10.2]
+
+TASK [Start Apache  Server] *************************************************************************************************************************************************************
+ok: [172.31.7.7]
+ok: [172.31.10.2]
+
+TASK [copy] *****************************************************************************************************************************************************************************
+changed: [172.31.7.7]
+changed: [172.31.10.2]
+
+PLAY RECAP ******************************************************************************************************************************************************************************
+172.31.10.2                : ok=5    changed=2    unreachable=0    failed=0    skipped=0    rescued=0    ignored=0   
+172.31.7.7                 : ok=5    changed=2    unreachable=0    failed=0    skipped=0    rescued=0    ignored=0   
