--- a/playbook_files.yml
+++ b/playbook_files.yml
@@ -1,24 +1,58 @@
-cat first.yml
+#################################################
 - name: Installing the Apache Webserver
   hosts: all
   become: yes
   tasks:
+    - name: update apt
+      shell: apt update
     - name: Installing Apache
-      apt: 
+      apt:
         name: apache2
         state: present
-    - name: Start Apadche Web Server
+    - name: Start Apache  Server
       service:
         name: apache2
         state: started
     - name: create a index.html file
       file:
         path: /var/www/html/index.html
-        state: present
+        state: touch
     - name: edit a file
       lineinfile:
         line: "Hi Ansible , Playbook"
-        path: /var/www/html/index.html    
+        path: /var/www/html/index.html
+  #################################################  
+  #################################################
+alka1@controlnode:~/test$ cat first.yml
+- name: Installing the Apache Webserver
+  hosts: all
+  become: yes
+  tasks:
+    - name: update apt
+      shell: apt update   
+    - name: Installing Apache
+      apt: 
+        name: apache2
+        state: present
+    - name: Start Apache  Server
+      service:
+        name: apache2
+        state: started
+    - copy:
+        src: /home/alka1/test/index.html ####### create the file in home directoy inddex.html
+        dest: /var/www/html/index.html
+        force: yes      
+    # - name: create a index.html file
+    #  file:
+    #    path: /var/www/html/index.html
+    #    state: touch
+    #- name: edit a file
+    #  lineinfile:
+    #    line: "Hi Ansible , Playbook"
+    #    path: /var/www/html/index.html 
+  #################################################
+  #################################################
+  
 ansible-playbook --syntax-check first.yml
 
 playbook: first.yml
